- Issue #1927258 by MegaChriz: fixed bug where selecting an address at
  checkout leaded to checkbox fields always being checked.
- Issue #1942748 by MegaChriz: added Views address row style plugin.
- Issue #1942746 by MegaChriz: added Views display access plugin and Views
  argument validator plugins for addresses.
- Issue #1433034 by MegaChriz: added default View for the address book page.

Ubercart Addresses 7.x-1.0-alpha1, 2012-10-11
------------------------------
- Issue #1104854 by MegaChriz: ported Ubercart Addresses 6.x-2.x to
  Drupal 7.

Ubercart Addresses 6.x-2.0-alpha2, 2012-10-11
------------------------------
- Issue #1381120 by MegaChriz: fixed foreach warning in address book when
  user has no addresses.
- Issue #1382088 by MegaChriz: added automated tests.
- by MegaChriz: backport of several changes made in 7.x-1.x branch.
- Issue #1412060 by MegaChriz: renamed permissions that contained an
  apostrophe: "everyone's" has been replaced by "all".
- Issue #1578362 by MegaChriz: implemented address tokens in order context.
- Issue #1668666 by miccelito, MegaChriz: make default addresses on address
  book page better themable.
- Issue #1670124 by MegaChriz: renamed theme hook "uc_addresses_pane" to
  "uc_addresses_form".
- Issue #1678406 by MegaChriz: fixed bug while loading Ubercart order which
  could result into a UcAddressesInvalidFieldException error when the order
  had fields starting with 'delivery' or 'billing' that were unknown to
  Ubercart Addresses.
- Issue #1391216 by MegaChriz, phead, MegaChriz: added basic Views
  integration.
- Issue #1382088 by MegaChriz: adjusted automated tests 'checkout' to be
  consistent with Ubercart's checkout test.
- Issue #1382088 by MegaChriz: changed methods getEditAddressValues() and
  generateAddressFieldValue() from UcAddressesTestCase class from
  'protected' to 'public static'.
- Issue #1735678 by MegaChriz: added an test for checking autofilling
  addresses on checkout.