@@ -110,12 +110,12 @@ abstract class UcAddressesTestCase extends DrupalWebTestCase {
    * Create a new address for an user.
    *
    * @param object $account
-   *   The user to create an address for
+   *   The user to create an address for.
    * @param boolean $may_edit
    *   If expected if the user may edit the address.
-   *   Defaults to TRUE
+   *   Defaults to TRUE.
    * @param array $values
-   *   (optional) The values for the address to set
+   *   (optional) The values for the address to set.
    *   If not given, default values will be used for the address.
    *
    * @return int
@@ -346,7 +346,7 @@ abstract class UcAddressesTestCase extends DrupalWebTestCase {
    * @todo Think of which values go in the values array.
    */
   public static function getEditAddressValues($parents = array(), $values = array(), $context = 'default', $prefix = '') {
-    // Initialize values array
+    // Initialize values array.
     $form_values = array();
 
     // Calculate parent string if needed.
@@ -373,16 +373,21 @@ abstract class UcAddressesTestCase extends DrupalWebTestCase {
         // The value is already set. Do not override it.
         continue;
       }
-      // Check if field is used in the context
-      if ($handler->checkContext()) {
+      if (array_key_exists($fieldname, $values) && is_null($values[$fieldname])) {
+        // Fields that are set to NULL should be skipped.
+        unset($values[$fieldname]);
+        continue;
+      }
+      // Check if the field is enabled an that it is used in the context.
+      if ($handler->isFieldEnabled() && $handler->checkContext()) {
         // Fill in a value.
         $values[$fieldname] = self::generateAddressFieldValue($fieldname, $values);
       }
     }
 
-    // Prefix values and add parents
+    // Prefix values and add parents.
     foreach ($values as $fieldname => $value) {
-      // Set in parents if needed
+      // Set in parents if needed.
       $formfieldname = $prefix . $fieldname;
       if ($parent_string) {
         $formfieldname = $parent_string . '[' . $formfieldname . ']';
@@ -418,17 +423,26 @@ abstract class UcAddressesTestCase extends DrupalWebTestCase {
         // Don't make addresses the default if this aspect is not tested.
         return 0;
       case 'postal_code':
-        // A numeric code for postal codes
+        // A numeric code for postal codes.
         return mt_rand(10000, 99999);
       case 'country':
-        // The default country in Ubercart
-        return variable_get('uc_store_country', 840);
-      case 'zone':
-        // Random zone based on the defined country
-        if (!isset($values['country'])) {
-          $values['country'] = self::generateAddressFieldValue('country', $values);
+        // The default country in Ubercart.
+        $country_id = uc_store_default_country();
+        // This can be a cached old value, ensure the country exist.
+        $result = db_query("SELECT COUNT(*) FROM {uc_countries} WHERE country_id = :id AND version > :version", array(':id' => $country_id, ':version' => 0))->fetchField();
+        if ($result == 0) {
+          $country_id = db_query_range("SELECT country_id FROM {uc_countries} WHERE version > :version", 0, 1, array(':version' => 0))->fetchField();
         }
-        return db_query("SELECT zone_id FROM {uc_zones} WHERE zone_country_id = :zone_country_id ORDER BY rand()", array(':zone_country_id' => $values['country']))->fetchField();
+        return $country_id;
+      case 'zone':
+        // Random zone based on the defined country.
+        if (isset($values['country'])) {
+          $country_id = $values['country'];
+        }
+        else {
+          $country_id = self::generateAddressFieldValue('country', $values);
+        }
+        return db_query("SELECT zone_id FROM {uc_zones} WHERE zone_country_id = :zone_country_id ORDER BY rand()", array(':zone_country_id' => $country_id))->fetchField();
       default:
         // In all other cases it is assummed that it's a textfield that needs to be filled in.
         return self::randomString(12);
